# c-examples

./: README.md
src/: CMakeLists.txt  basic_arithmetic.c  bool.c  calloc.c  double_free.c  for.c  function.c  garbage_data_1.c  garbage_data_2.c  hello.c  if_else.c  malloc.c  memory.c  pointers.c  pointers_and_arrays.c  printing.c  realloc.c  static_arrays.c  string_functions.c  strings.c  structs.c  switch.c  switch.py  types.c  variables.c  while.c
